packages/jokul/src/components/button/styles/button.scss
@charset "UTF-8";
@use "sass:string";
@use "../../../core/jkl";

$_flash-animation-name: jkl-tertiary-flash-#{string.unique-id()};

@include jkl.comfortable-density-variables {
    --jkl-button-padding-block: #{jkl.$spacing-8};
    --jkl-button-padding-text: #{jkl.$spacing-24};
    --jkl-button-padding-icon: #{jkl.$spacing-16};
    --jkl-button-padding-icon-button: #{jkl.$spacing-8};
    --jkl-button-padding-tertiary-inline: #{jkl.$spacing-4};
    --jkl-button-padding-ghost-inline: #{jkl.$spacing-8};
    --jkl-button-font-size: #{jkl.$typography-body-small-font-size};
    --jkl-button-line-height: #{jkl.$typography-body-small-line-height};

    @include jkl.from-medium-device {
        --jkl-button-font-size: #{jkl.$typography-body-base-font-size};
        --jkl-button-line-height: #{jkl.$typography-body-base-line-height};
    }
}

@include jkl.compact-density-variables {
    --jkl-button-padding-block: #{jkl.$spacing-4};
    --jkl-button-padding-text: #{jkl.$spacing-12};
    --jkl-button-padding-icon: #{jkl.$spacing-8};
    --jkl-button-padding-icon-button: #{jkl.$spacing-4};
    --jkl-button-padding-tertiary-inline: #{jkl.$spacing-2};
    --jkl-button-padding-ghost-inline: #{jkl.$spacing-4};
    --jkl-button-font-size: #{jkl.$typography-small-small-font-size};
    --jkl-button-line-height: #{jkl.$typography-small-small-line-height};

    @include jkl.from-medium-device {
        --jkl-button-font-size: #{jkl.$typography-small-base-font-size};
        --jkl-button-line-height: #{jkl.$typography-small-base-line-height};
        --jkl-button-icon-weight: #{jkl.$icon-weight-bold};
    }
}

.jkl-button {
    --jkl-icon-weight: var(--jkl-button-icon-weight, initial);
    --text-color: var(--jkl-color-text-default);
    --background-color: transparent;
    --border-radius: 0;
    --border-width: #{jkl.rem(1px)}; // For secondary og tertiary button

    display: inline-block;

    font-weight: #{jkl.$typography-weight-bold};
    font-size: var(--jkl-button-font-size);
    line-height: var(--jkl-button-line-height);

    // button and link resets
    cursor: pointer;
    user-select: none;
    background-color: var(--background-color);
    color: var(--text-color);
    border: unset;
    text-decoration: none;
    -webkit-tap-highlight-color: transparent;

    border-radius: var(--border-radius);
    padding-inline: var(--jkl-button-padding-text);
    padding-block: var(--jkl-button-padding-block);
    position: relative;
    overflow: hidden;
    max-width: 100%;

    @include jkl.motion("standard", "productive", scale);

    &:has(.jkl-icon:first-child) {
        padding-inline-start: var(--jkl-button-padding-icon);
    }

    &:has(.jkl-icon:last-child) {
        padding-inline-end: var(--jkl-button-padding-icon);
    }

    &:has(.jkl-icon:first-child):has(.jkl-icon:last-child) {
        padding-inline: var(--jkl-button-padding-icon-button);
    }

    &__label {
        @include jkl.motion("standard", "expressive", translate);

        width: 100%;
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: jkl.$spacing-2;
        pointer-events: none;
    }

    &__loader {
        @include jkl.motion("standard", "expressive", opacity, translate);

        position: absolute;
        top: 50%;
        left: 50%;
        translate: -50% 350%;
        opacity: 0;
        pointer-events: none;
    }

    &__text {
        // Håndter tekster som er lenger enn knappen
        // Knappen vokser til teksten, men kan f.eks. begrenses
        // av sidebredde på mobil
        width: 100%;
        max-width: 100%;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
    }

    &[data-loading="true"] &__label {
        translate: 0 -120%;
    }

    &[data-loading="true"] &__loader {
        translate: -50% -50%;
        opacity: 1;
    }

    &:focus-visible {
        @include jkl.focus-outline;
    }

    // Dette er elementet som viser touch-animasjon
    &::before {
        content: "";
        pointer-events: none;
        display: block;
        position: absolute;
        left: var(--jkl-touch-xcoord, 50%);
        top: var(--jkl-touch-ycoord, 50%);
        translate: -100%, -100%;
        transform-origin: center;
        border-radius: 9999px;
        background-color: var(--text-color);
        opacity: 0;
        width: jkl.rem(16px);
        height: jkl.rem(16px);
    }

    html[data-touchnavigation] &.jkl-button--pressed::before {
        animation: jkl.easing("focus") jkl.timing("expressive")
            $_flash-animation-name;
    }

    &--primary,
    &--secondary,
    &--tertiary {
        :not([data-touchnavigation]) &:hover {
            scale: 1.05;
            transform-origin: center;
        }
    }

    &--primary,
    &--secondary {
        --border-radius: 999px;
    }

    &--primary {
        --background-color: var(--jkl-color-background-action);
        --text-color: var(--jkl-color-text-on-action);
    }

    &--secondary {
        &::after {
            content: "";
            position: absolute;
            inset: 0;
            border-radius: var(--border-radius);
            border: var(--border-width) solid var(--text-color);
        }
    }

    &--tertiary,
    &--tertiary:has(.jkl-icon:first-child),
    &--tertiary:has(.jkl-icon:last-child) {
        padding-inline: var(--jkl-button-padding-tertiary-inline);

        &::after {
            content: "";
            position: absolute;
            inset: 0;
            border-radius: var(--border-radius);
            border-bottom: var(--border-width) solid var(--text-color);
        }

        &:hover,
        &:focus-visible {
            --border-width: #{jkl.rem(2px)};
        }
    }

    &--ghost,
    &--ghost:has(.jkl-icon:first-child),
    &--ghost:has(.jkl-icon:last-child) {
        padding-inline: var(--jkl-button-padding-ghost-inline);
        border-radius: jkl.rem(4px);

        @include jkl.motion("standard", "productive", background-color);

        &:hover {
            --background-color: var(--jkl-color-background-interactive-hover);
        }
    }
}

@keyframes #{$_flash-animation-name} {
    0% {
        opacity: 0.5;
        scale: 1;
    }

    100% {
        opacity: 0;
        scale: 8;
    }
}

